# diff3d

./: README.md  pyproject.toml
diff3d/: __init__.py  text.py
